--- a/misc/Jenkinsfile
+++ b/misc/Jenkinsfile
@@ -6,7 +6,7 @@ node {
      commit_id = readFile('.git/commit-id').trim()
    }
    stage('test') {
-     nodejs(nodeJSInstallationName: 'nodejs') {
+     nodejs(nodeJSInstallationName: 'NodeJS4.6.1') {
        sh 'npm install --only=dev'
        sh 'npm test'
      }
